# animepahe-tv

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-all.yml
src/: app.py  main.py
src/components/player/: immersive_player.py
src/components/ui/: glass_container.py
src/core/: config.py  focus_manager.py  state.py  theme.py
src/services/: animepahe.py  cache.py  ddos_solver.py  fallback_manager.py  kwik_resolver.py
src/views/: anime_detail.py  home.py  player.py  search.py  splash.py
