[project]
name = "animepahe-tv"
version = "0.1.0"
description = "Lightweight client-side Android TV / mobile / desktop app for streaming anime from AnimePahe."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.12.0",
    "flet==0.85.0",
    "flet-video==0.85.0",
    "httpx>=0.28.1",
]

[tool.flet]
org = "com.animepahe"
product = "AnimePahe TV"
build_number = 1

[tool.flet.app]
path = "src"

[tool.flet.android]
bundle_id = "com.animepahe.tv"

[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.ACCESS_NETWORK_STATE" = true
"android.permission.WAKE_LOCK" = true

[tool.flet.android.feature]
"android.software.leanback" = true
"android.hardware.touchscreen" = false
